Fixed issues where the footer was overlapping content

--- a/public/css/all.css
+++ b/public/css/all.css
@@ -129,6 +129,7 @@ a:hover { text-decoration: underline; }
 	overflow: auto;
 	min-height: 100%;
 	position: relative;
+	padding-bottom: 70px;
 }
 
 
@@ -1224,6 +1225,7 @@ a:hover { text-decoration: underline; }
     text-align: justify;
     padding-top: 10px;
     font-size: 16px;
+    margin-bottom: 50px;
 }
 
 .about a {
